...
      length: 2,
      child: Scaffold(
        body: NestedScrollView(
          headerSliverBuilder: (context, innerBoxIsScrolled) {
            return [
              SliverAppBar(
                title: const Text('Hub'),
                pinned: true,
                floating: true,
                actions: [
                  _PersonalizationButton(),
                  const _SearchButton(),
                ],
...
